--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-# Angular build output
-dist/
-.angular/
+# Ignore everything
+*
 
-# Node modules
-node_modules/
-
-# IDE & OS files
-.vscode/
-.DS_Store
-Thumbs.db
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Keep only site files
+!.gitignore
+!index.html
+!favicon.ico
+!*.js
+!*.css
+!assets/
+!404.html
