--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,13 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '20.19'
+          node-version: 20
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
@@ -29,5 +30,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: build   # ✅ tu déploies sur build
-          folder: dist/homiegaminghub/browser
+          branch: gh-pages
+          folder: dist/homiegaminghub
